--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,22 +3,7 @@
 <div class="max-w-3xl mx-auto pt-6">
   <h1 class="text-lg font-semibold mb-4">投稿を編集する</h1>
 
-  <div class="bg-white rounded-2xl shadow-md px-6 py-5 space-y-6">
-
-    <!-- 投稿編集フォーム -->
+  <div class="bg-white rounded-2xl shadow-md px-6 py-5">
     <%= render "form", post: @post, mode: :page %>
-
-    <!-- 投稿削除ボタン -->
-    <div class="pt-4 border-t border-slate-200">
-      <%= button_to "投稿を削除する",
-            post_path(@post),
-            method: :delete,
-            data: {
-              turbo_confirm: "本当にこの投稿を削除しますか？"
-            },
-            class: "w-full text-center bg-rose-500 text-white py-3 rounded-xl hover:bg-rose-600 transition"
-      %>
-    </div>
-
   </div>
 </div>
