--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -178,7 +178,7 @@
         <% end %>
 
         <!-- バディ -->
-        <%= link_to "#", class: "flex-1 flex justify-center" do %>
+        <%= link_to buddies_path, class: "flex-1 flex justify-center" do %>
           <div class="flex flex-col items-center justify-center w-14 h-14 rounded-2xl bg-white shadow-sm hover:bg-amber-50 transition">
             <%= image_tag "/bottom_nav/buddy.png", class: "w-8 h-8", alt: "バディ" %>
             <span class="text-[10px] mt-1">バディ</span>
